# responsible-ai-practice

./: .gitignore  README.md  main.py  pyproject.toml
01-PII-detection/: .env.example  EMAIL.md  EXECUTIVE_SUMMARY.md  PACKAGE_CONTENTS.txt  PRESENTATION.md  QUICK_START.txt  README.md  START_HERE.txt  VISUAL_SUMMARY.txt  WELCOME.txt  azure_open_ai.py  demo.py  pii_comparison.py  presidio_detector.py  requirements.txt  sample_email.txt  transformer_detector.py
01-PII-detection/results/: azure_openai_results.txt  comparison_report.csv  presidio_results.txt  transformer_results.txt
01-PII-detection/results/anonymized_emails/: azure_openai_anonymized.txt  presidio_anonymized.txt  transformer_anonymized.txt
01-data-bais-practice/: 01.data-fairness-practice.py  ONE_PAGE_PRESENTATION.md  QUICK_START.md
02-data-bias-practice/: EXECUTIVE_SUMMARY.md  FILE_STRUCTURE.md  INDEX.md  NOTEBOOK_GUIDE.md  README.md  blog_rose_jack_story.md  insurance_bias_mitigation.ipynb  insurance_bias_mitigation.py  presentation.html
04-Shap-Transform/: API_EXAMPLES.md  CHANGELOG.md  PROJECT_OVERVIEW.txt  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  agent.py  api_server.py  claim_classifier.py  config.py  demo_lightweight.py  gptoss.py  main.py  movie.ipynb  movie.py  requirements.txt  result_CLM-2024-001.json  result_CLM-2024-002.json  result_CLM-2024-003.json  setup.py  setup.sh  summary.json  test_agent.py  visualize.py
04-Shap-Transform/docs/: business_presentation.md
04-Shap-Transform/examples/: demo.py
04-Shap-Transform/notebooks/: analysis_tutorial.ipynb
04-Shap-Transform/outputs/: result_CLM-2024-001.json  result_CLM-2024-002.json  result_CLM-2024-003.json  summary.json
04-Shap-Transform/src/: __init__.py  semantic_analyzer.py  shap_explainer.py  visualization.py
