[project]
name = "responsible-ai-practice"
version = "0.1.0"
description = "A project focused on implementing and demonstrating best practices for responsible artificial intelligence development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fairlearn>=0.9.0",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "matplotlib>=3.10.7",
    "lightgbm>=4.6.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "notebook>=6.4",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0",
    "notebook>=6.4",
]
