[project]
name = "responsible-ai-practice"
version = "0.1.0"
description = "A project focused on implementing and demonstrating best practices for responsible artificial intelligence development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fairlearn>=0.9.0",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "matplotlib>=3.10.7",
    "lightgbm>=4.6.0",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "spacy>=3.8.7",
    "transformers>=4.57.1",
    "torch>=2.9.0",
    "pandas>=1.5.3",
    "accelerate>=1.11.0",
    "shap>=0.49.1",
    "seaborn>=0.13.2",
    "openai>=2.7.1",
    "azure-identity>=1.25.1",
    "dotenv>=0.9.9",
    "pip>=25.3",
    "xgboost>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "notebook>=6.4",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0",
    "notebook>=6.4",
]
